# todocolors

./: .directory  README.md
media/: logo.xcf
todoblue/: .dockerignore  .gitignore  BUILD.md  DEVELOP.md  Dockerfile  NOTICE.txt  notice-text.fish  package.json
todoblue/public/: manifest.json
todoblue/src/: middleware.ts
todoblue/src/app/: AppBody.module.css  CreatePrivateBoard.tsx  CreatePrivateBoardPanel.tsx  CreatePublicBoard.tsx  CreatePublicBoardPanel.tsx  RootFooter.tsx  RootHeader.tsx  RootMain.tsx  ServersideConfigurationManager.tsx  SiteName.tsx  StarContext.tsx  StarredBoardsPanel.tsx  layout.css  layout.tsx  page.tsx  useCycleState.ts  useHttpBaseURL.ts  useKebabState.ts  useServersideConfigurationEnvvars.ts  useWebSocket.ts  useWsBaseURL.ts
todoblue/src/app/(api)/: useWs.ts  useWsBaseURL.ts
todoblue/src/app/(i18n)/: client.ts  server.ts
todoblue/src/app/(utils)/: ReturnTypeOfUseState.ts  useCycleState.ts  useCycler.ts  useKebabState.ts  usePageTitleSetter.ts
todoblue/src/app/[lang]/: AppBody.tsx  Body.tsx  StarContext.tsx  layout.tsx  page.module.css  page.tsx  useBoardCreator.ts  useWs.ts  (+2 more)
todopod/: compose-build.yml  compose.yml  docker-compose.yml
todopod/config/caddy/: Caddyfile
todored/: .dockerignore  BUILD.md  Cargo.toml  DEVELOP.md  Dockerfile  NOTICE.json  NOTICE.md  notice-json.fish  notice-markdown.fish
todored/src/: config.rs  kebab.rs  main.rs  op.rs  outcome.rs  proxy.rs  task.rs  utils.rs
todored/src/routes/: board.rs  mod.rs  root.rs  structs.rs
todored/src/routes/board/: axum.rs  limit.rs  mod.rs  redis_xadd.rs  redis_xread.rs  stream.rs  structs.rs  ws.rs  ws_receive.rs  ws_send.rs
todored/src/task/: mod.rs  v1.rs  v2.rs  v3.rs
(+221 files in other folders)
