[package]
name = "todored"
version = "0.4.0"
license = "EUPL-1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
chrono = { version = "0.4.28", features = ["serde"] }
deadqueue = "0.2.4"
futures-util = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.19"
micronfig = "0.2.0"
pkg-version = "1.0.0"
pretty_env_logger = "0.5.0"
redis = { version = "0.23.1", features = ["r2d2", "ahash", "cluster", "tokio-comp", "connection-manager"] }
regex = "1.9.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
